# DSC-tools

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
CMake/: Config.cmake.in  FindOpenNI.cmake  FindOpenNI2.cmake  FindZEROMQ.cmake
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/example_app/: CMakeLists.txt  main.cpp
apps/ht_vr/: CMakeLists.txt
apps/ht_vr/include/: head_detection_pipeline.hpp
apps/ht_vr/src/: head_detection_pipeline.cpp  main.cpp
data/: config.json
include/: enums.hpp  generic_openni_device.hpp  utility_functions.hpp  visualizer.hpp
src/: CMakeLists.txt  generic_openni_device.cpp  visualizer.cpp
